[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Game/CastTargetMarker/CastTargetMarker.gd" type="Script" id=1]
[ext_resource path="res://scenes/Game/CastTargetMarker/marker.png" type="Texture" id=2]
[ext_resource path="res://scenes/Game/CastTargetMarker/swoosh-brighter.wav" type="AudioStream" id=3]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
flags_disable_ambient_light = true
albedo_color = Color( 0.615686, 0.615686, 0.615686, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CastMarker:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.15, 0 ), Vector3( 0, 0.05, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CastMarker:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1.5, 1.5, 1 ), Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CastMarker:material/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.615686, 0.615686, 0.615686, 0 ), Color( 0.615686, 0.615686, 0.615686, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "rotation"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CastMarker:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -90, 0, 0 ), Vector3( -90, 360, 0 ) ]
}

[node name="CastTargetMarker" type="Spatial"]
script = ExtResource( 1 )

[node name="CastMarker" type="MeshInstance" parent="."]
transform = Transform( 0.947504, 0.319743, 1.39764e-08, 0, -4.37114e-08, 1, 0.319743, -0.947504, -4.14167e-08, 0, 0.05, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="FadeInPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 3 )

[node name="RotationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rotation"
anims/rotation = SubResource( 4 )

[node name="CastSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
autoplay = true
bus = "Fx"

[node name="KillTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
